# pdf-perma-urls

./: README.md  main.py  pyproject.toml  requirements.in  requirements.txt  setup.py
pdf_perma_urls/: main.py
