[tool.poetry]
name = "pdf-perma-urls"
version = "0.2.0"
description = ""
authors = ["Ben Steinberg <bsteinberg@law.harvard.edu>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "pdf_perma_urls"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.31.0"
tqdm = "^4.64.1"

[tool.poetry.scripts]
pdf-perma-urls = 'pdf_perma_urls.main:read_pdf'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
